@@ -19,6 +19,8 @@
 //Note 2: All rates are in percents, 100 would mean 100%, 200
 //   would mean 200%, etc
 //Note 3: Value is not limited to 60K (see below)
+//Note 4: Use bitmask values to specify who is affected 
+//        (1: Pc, 2: Mob, 4: Pet, 8: Homonculus)
 // Other Information:
 // All options are limited to a max of 60K (aprox) which is 600%
 // or 60secs as appropiate.
@@ -36,8 +38,7 @@ monster_hp_rate: 100
 // The maximum attack speed of a monster
 monster_max_aspd: 199
 
-// Defines various mob AI related settings. The mask bits are 
-// (add to include multiple settings):
+// Defines various mob AI related settings. [Note 4]
 // 0x001: When enabled mobs will update their target cell every few iterations
 //        (normally they never update their target cell until they reach it while
 //        chasing)
@@ -59,9 +60,6 @@ monster_max_aspd: 199
 //        of players.
 // 0x040: When set, when the mob's target changes map, the mob will walk towards
 //        any npc-warps in it's sight of view (use with mob_npc_warp below)
-// 0x080: When set, aggressive mobs will give the same priority to Homuns and
-//        players and will go after the closest target instead of always picking
-//        the homunculus
 // 0x100: When set, a mob will pick a random skill from it's list and start from
 //        that instead of checking skills in orders (when unset, if a mob has too
 //        many skills, the ones near the end will rarely get selected)
